# benchboard

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: custom.css  stylesheet.css
src/: main.rs  plot.rs  view.rs
templates/: base.html  commit_form.html  commit_subtitle.html  home.html  invocation_progress.html  span_change.html  span_change_no_baseline.html  span_change_with_baseline.html  view_span.html  view_span_comparison.html  view_span_no_comparison.html  view_spans.html  view_spans_comparison.html  view_spans_no_comparison.html  workload.html  workload_summary.html
