[package]
name = "benchboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["with-axum", "markdown"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["http2"] }
axum-extra = "0.9.2"
axum-sqlx-tx = { version = "0.8.0", features = ["sqlite"] }
clap = { version = "4.5.0", features = ["derive"] }
futures-util = "0.3.30"
itertools = "0.12.1"
plotly = { version = "0.8.4", git = "https://github.com/dureuill/plotly.git", branch = "feature_with_axum", features = ["with-axum"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
time = { version = "0.3.33", features = ["serde-human-readable", "formatting"] }
tokio = { version = "1.36.0", features = ["net", "parking_lot", "rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["auth", "normalize-path"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["serde", "v7"] }
